fix contrast errors

--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ height: auto;
 }
 
 a {
-  background-color: #e66031;
-  color: white;
+  background-color: white;
+  color: #3d7c40;
   text-decoration: none;
 }
 
